  * lib/get-config-dir-*: task_error requires the exit code of the
    preceeding command as the second argument
  * lib/subroutines-linux: The exit code of a command earlier in a pipe
    must be read using $PIPESTATUS, not $? (closes: #444210)
  * bin/faimond: Try to load Proc::Daemon only in case -d is given; if it
    fails, print a helpful error message (closes: #513090)

 -- Thomas Lange <lange@debian.org>  Thu, 09 Apr 2009 17:02:27 +0200

 (3.2.17) unstable; urgency=medium

  * fai 3.2.17 and 3.2.17~lenny1 are identical - the difference in version 
    number is only due to the way packages move within Debian releases.
  * Added myself to uploaders.
  * Fix typo in fai-do-scripts which prevented perl scripts to be executed, 
    thanks to Andrew Ruthven for reporting this. (Closes: #504662)
  * setup-storage/Parser.pm: Do not enforce a space after VG/LV names in
    resize/preserve options. Thanks to Frederic Blanc for the patch.
    (closes: #516849)
  * fai-mirror: honor $debug and $qflag environment variables, thanks to 
    Michael Tautschnig. (Closes: #494431)
  * device2grub: Add /dev/i2o/hdX  to the list of recognized devices. Thanks
    to Jürgen Kahnert for the patch. (Closes: #515101)

 -- Holger Levsen <holger@debian.org>  Wed, 25 Feb 2009 12:26:19 +0100

fai (3.2.16) unstable; urgency=high

  [ Thomas Lange ]
  * fai: fix RC bug, missing umount (closes: #511391)
  * README: year++
  * prcopyleft: year++

  [ Colin Tuckley ]
  * fixed spelling mistakes in faimond.8, faimond-gui.1

 -- Thomas Lange <lange@debian.org>  Mon, 12 Jan 2009 13:12:26 +0100

fai (3.2.15) unstable; urgency=low

  [ Thomas Lange ]
  * fai-server.manpages: faimond-gui.1 was not included into the package
  * fix typos in mkdebmirror, NEWS, classes_description.txt, fai-mirror,
    fai-cd.8, fai-guide.sgml
  * lib/subroutines: check *.var files if they are readable
  * bootexample.sgml: fix typo
  * dhcpd.conf/FAISERVER: fix wrong path in example