@@ -115,8 +115,9 @@ warn "Starting setup-storage $version\n";
 print "Using config file: $opt_f\n";
 &FAI::run_parser($config_file);
 
-# mark devices as preserve, where not all already done so
-&FAI::propagate_preserve;
+# mark devices as preserve, where not all already done so and check that only
+# defined devices are marked preserve
+&FAI::propagate_and_check_preserve;
 
 # read the sizes and partition tables of all disks listed in $FAI::disks
 &FAI::get_current_disks;
