@@ -74,6 +74,9 @@ fai (3.2.18) UNRELEASED; urgency=low
     must be read using $PIPESTATUS, not $? (closes: #444210)
   * bin/faimond: Try to load Proc::Daemon only in case -d is given; if it
     fails, print a helpful error message (closes: #513090)
+  * bin/setup-storage, setup-storage/Volumes.pm: When propagating preserve
+    markers also check whether the to-be-preserved volume is defined at all
+    (closes: #521153)
 
  -- Thomas Lange <lange@debian.org>  Thu, 09 Apr 2009 17:02:27 +0200
 
